ecmascript/parser/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts.stderr
error: Unexpected token `metal`. Expected meta
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:23:23
   |
23 | export let y = import.metal;
   |                       ^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:23:23
   |
23 | export let y = import.metal;
   |                       ^^^^^

error: Unexpected token `import`. Expected meta
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:24:23
   |
24 | export let z = import.import.import.malkovich;
   |                       ^^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:24:23
   |
24 | export let z = import.import.import.malkovich;
   |                       ^^^^^^

error: Unexpected token `import`. Expected meta
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:24:30
   |
24 | export let z = import.import.import.malkovich;
   |                              ^^^^^^

error: Unexpected token `metal`. Expected meta
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:28:22
   |
28 | let globalB = import.metal;
   |                      ^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:28:22
   |
28 | let globalB = import.metal;
   |                      ^^^^^

error: Unexpected token `import`. Expected meta
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:29:22
   |
29 | let globalC = import.import.import.malkovich;
   |                      ^^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:29:22
   |
29 | let globalC = import.import.import.malkovich;
   |                      ^^^^^^

error: Unexpected token `import`. Expected meta
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:29:29
   |
29 | let globalC = import.import.import.malkovich;
   |                             ^^^^^^

error[2406]: Not a variable
  --> $DIR/tests/typescript-errors/tsc/es2019/importMeta/importMeta/input.ts:33:1
   |
33 | import.meta = foo;
   | ^^^^^^^^^^^

